some refactoring + some styling

--- a/GameBasicsSimulator/Views/Home/Index.cshtml
+++ b/GameBasicsSimulator/Views/Home/Index.cshtml
@@ -64,39 +64,63 @@
     <fieldset>
         <legend>Fixtures</legend>
         <div class="match" id="0">
-            <span></span>
+            <div class="match-display-team">
+                <span></span>
+            </div>
             -
-            <span></span>
+            <div class="match-display-team">
+                <span></span>
+            </div>
             <input type="button" value="play" />
         </div>
         <div class="match" id="1">
-            <span></span>
+            <div class="match-display-team">
+                <span></span>
+            </div>
             -
-            <span></span>
+            <div class="match-display-team">
+                <span></span>
+            </div>
             <input type="button" value="play" hidden />
         </div>
         <div class="match" id="2">
-            <span></span>
+            <div class="match-display-team">
+                <span></span>
+            </div>
             -
-            <span></span>
+            <div class="match-display-team">
+                <span></span>
+            </div>
             <input type="button" value="play" hidden />
         </div>
         <div class="match" id="3">
-            <span></span>
+            <div class="match-display-team">
+                <span></span>
+            </div>
             -
-            <span></span>
+            <div class="match-display-team">
+                <span></span>
+            </div>
             <input type="button" value="play" hidden />
         </div>
         <div class="match" id="4">
-            <span></span>
+            <div class="match-display-team">
+                <span></span>
+            </div>
             -
-            <span></span>
+            <div class="match-display-team">
+                <span></span>
+            </div>
             <input type="button" value="play" hidden />
         </div>
         <div class="match" id="5">
-            <span></span>
+            <div class="match-display-team">
+                <span></span>
+            </div>
             -
-            <span></span>
+            <div class="match-display-team">
+                <span></span>
+            </div>
             <input type="button" value="play" hidden />
         </div>
     </fieldset>
@@ -106,7 +130,7 @@
         <div id="teams-wrapper"></div>
         <div id="score-wrapper"></div>
         <div id="match-wrapper"></div>
+        <!-- Todo: add goals per match (including minutes in which they were scored) -->
     </fieldset>
-    <input id="btn-clear" type="button" value="clear" />
 </body>
 </html>
