lowered match algorithm threshold for goals + added clear button + added match score

--- a/GameBasicsSimulator/Views/Home/Index.cshtml
+++ b/GameBasicsSimulator/Views/Home/Index.cshtml
@@ -71,7 +71,8 @@
             <div class="match-display-team">
                 <span></span>
             </div>
-            <input type="button" value="play" />
+            <input class="btn-play" type="button" value="play" />
+            <span class="match-result"></span>
         </div>
         <div class="match" id="1">
             <div class="match-display-team">
@@ -81,7 +82,8 @@
             <div class="match-display-team">
                 <span></span>
             </div>
-            <input type="button" value="play" hidden />
+            <input class="btn-play" type="button" value="play" hidden />
+            <span class="match-result"></span>
         </div>
         <div class="match" id="2">
             <div class="match-display-team">
@@ -91,7 +93,8 @@
             <div class="match-display-team">
                 <span></span>
             </div>
-            <input type="button" value="play" hidden />
+            <input class="btn-play" type="button" value="play" hidden />
+            <span class="match-result"></span>
         </div>
         <div class="match" id="3">
             <div class="match-display-team">
@@ -101,7 +104,8 @@
             <div class="match-display-team">
                 <span></span>
             </div>
-            <input type="button" value="play" hidden />
+            <input class="btn-play" type="button" value="play" hidden />
+            <span class="match-result"></span>
         </div>
         <div class="match" id="4">
             <div class="match-display-team">
@@ -111,7 +115,8 @@
             <div class="match-display-team">
                 <span></span>
             </div>
-            <input type="button" value="play" hidden />
+            <input class="btn-play" type="button" value="play" hidden />
+            <span class="match-result"></span>
         </div>
         <div class="match" id="5">
             <div class="match-display-team">
@@ -121,7 +126,8 @@
             <div class="match-display-team">
                 <span></span>
             </div>
-            <input type="button" value="play" hidden />
+            <input class="btn-play" type="button" value="play" hidden />
+            <span class="match-result"></span>
         </div>
     </fieldset>
 
@@ -132,5 +138,6 @@
         <div id="match-wrapper"></div>
         <!-- Todo: add goals per match (including minutes in which they were scored) -->
     </fieldset>
+    <input id="btn-clear" type="button" value="clear" />
 </body>
 </html>
